feat(IL) - add swagger
