# api/gen/http/openapi.yaml
@@ -3,7 +3,7 @@ info:
   title: PriceOracle Service
   description: HTTP server for the Price Oracle API
   version: ""
-host: 0.0.0.0:9924
+host: k8s.mainnet.price-oracle.injective.network
 consumes:
 - application/json
 - application/xml
@@ -33,7 +33,7 @@ paths:
           schema:
             $ref: '#/definitions/HealthGetStatusInternalResponseBody'
       schemes:
-      - http
+      - https
   /api/price-oracle/v1/probe:
     post:
       tags:
@@ -76,10 +76,93 @@ paths:
           schema:
             $ref: '#/definitions/InjectivePriceOracleAPIProbeInternalResponseBody'
       schemes:
-      - http
+      - https
       security:
       - api_key_header_X-Api-Key: []
+  /swagger/{path}:
+    get:
+      tags:
+      - Swagger
+      summary: Download ./swagger/
+      description: Serve static content.
+      operationId: Swagger#/swagger/{*path}
+      parameters:
+      - name: path
+        in: path
+        description: Relative file path
+        required: true
+        type: string
+      responses:
+        "200":
+          description: File downloaded
+          schema:
+            type: file
+        "404":
+          description: File not found
+          schema:
+            $ref: '#/definitions/Error'
+      schemes:
+      - https
+  /swagger/index.html:
+    get:
+      tags:
+      - Swagger
+      summary: Download ./swagger/index.html
+      description: Provide Swagger-UI html document
+      operationId: Swagger#/swagger/index.html
+      responses:
+        "200":
+          description: File downloaded
+          schema:
+            type: file
+      schemes:
+      - https
 definitions:
+  Error:
+    title: 'Mediatype identifier: application/vnd.goa.error; view=default'
+    type: object
+    properties:
+      fault:
+        type: boolean
+        description: Is the error a server-side fault?
+        example: false
+      id:
+        type: string
+        description: ID is a unique identifier for this particular occurrence of the
+          problem.
+        example: 123abc
+      message:
+        type: string
+        description: Message is a human-readable explanation specific to this occurrence
+          of the problem.
+        example: parameter 'p' must be an integer
+      name:
+        type: string
+        description: Name is the name of this class of errors.
+        example: bad_request
+      temporary:
+        type: boolean
+        description: Is the error temporary?
+        example: true
+      timeout:
+        type: boolean
+        description: Is the error a timeout?
+        example: true
+    description: Error response result type (default view)
+    example:
+      fault: true
+      id: 123abc
+      message: parameter 'p' must be an integer
+      name: bad_request
+      temporary: true
+      timeout: true
+    required:
+    - name
+    - id
+    - message
+    - temporary
+    - timeout
+    - fault
   HealthGetStatusInternalResponseBody:
     title: 'Mediatype identifier: application/vnd.goa.error; view=default'
     type: object
@@ -105,7 +188,7 @@ definitions:
       temporary:
         type: boolean
         description: Is the error temporary?
-        example: true
+        example: false
       timeout:
         type: boolean
         description: Is the error a timeout?
@@ -116,7 +199,7 @@ definitions:
       id: 123abc
       message: parameter 'p' must be an integer
       name: bad_request
-      temporary: false
+      temporary: true
       timeout: false
     required:
     - name
@@ -145,12 +228,12 @@ definitions:
         - no_data
       status:
         type: string
-        example: Ut temporibus rem maxime ex eos.
+        example: Est ut consequatur.
     example:
       data: {}
       errmsg: Something has failed
       s: error
-      status: Ut consequatur temporibus non dolor rerum commodi.
+      status: Non dolor rerum.
     required:
     - s
     - status
